--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.6
+
 
 dev_dependencies:
   flutter_test:
@@ -89,10 +91,10 @@ flutter:
          weight: 500
   #       - asset: fontsf/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+   - family: Oleo_Script
+     fonts:
+       - asset: assets/fonts/Oleo_Script/OleoScript-Bold.ttf
+       - asset: assets/fonts/Oleo_Script/OleoScript-Regular.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
