--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.8.6
   provider: ^6.0.4
   http: ^0.13.5
+  syncfusion_flutter_gauges: ^20.3.57
 
 
 dev_dependencies:
