--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,22 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.2.15
+  flutter_launcher_icons: "^0.11.0"
+
+flutter_native_splash:
+  color: "#19173D"
+  # image: assets/images/logo.png
+  android: true
+  ios: true
+  web: false
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_foreground: "assets/images/logo.png"
+  adaptive_icon_background: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
