--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   provider: ^6.0.4
   http: ^0.13.5
   syncfusion_flutter_gauges: ^20.3.57
+  qr_code_scanner: ^1.0.1
+  share_plus: ^6.3.0
+  path_provider: ^2.0.11
+  path: ^1.8.2
 
 
 dev_dependencies:
@@ -66,7 +70,7 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
-  adaptive_icon_foreground: "assets/images/logo.png"
+  adaptive_icon_foreground: "assets/images/splash.png"
   adaptive_icon_background: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
