--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   share_plus: ^6.3.0
   path_provider: ^2.0.11
   path: ^1.8.2
+  shared_preferences: ^2.0.15
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.0.9
+  flutter_svg: ^1.1.6
 
 
 dev_dependencies:
